--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -45,6 +45,7 @@
                 <li><%= link_to 'Blog', blogitems_path %></li>
                 <li><%= link_to 'Bier', beers_path %></li>
                 <li><%= link_to 'Statistieken', stats_path %></li>
+                <li><%= link_to 'Bezoekers', visitors_path %></li>
                 <li><%= link_to 'Bijnamen', nicknames_path %></li>
                 <% if current_user.brouwer? %><li><%= link_to 'Brouwerij', "http://brewery.zondersikkel.nl/" %></li><% end %>
               </ul>
