support for user switching and added oauth for non members

--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -62,7 +62,7 @@
               <td><%= beer.brewer %></td>
               <td><%= beer.country %></td>
               <td><%= beer.reviews.count %></td>
-              <% if current_user %>
+              <% if current_user&.active? %>
                 <td>
                   <%= link_to 'Verwijder', beer, class: 'btn btn-danger', method: :delete, data: {confirm: 'Are you sure?'} %>
                 </td>
@@ -72,6 +72,6 @@
   </tbody>
 </table>
 
-<% if current_user %>
+<% if current_user&.active? %>
   <%= link_to 'Nieuw bier', new_beer_path, :class => 'btn btn-block btn-primary btn-sm' %>
 <% end %>
