--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,17 +16,31 @@
       </div>
       <div class="collapse navbar-collapse" id="navigationbar">
         <ul class="nav navbar-nav navbar-right">
-          <% unless signed_in? %>
+          <% unless current_user&.active? %>
             <li><%= link_to 'Leden', public_leden_path %> </li>
             <li><%= link_to 'Bieren', beers_path %></li>
             <li><%= link_to 'Blog', blogitems_path %></li>
+            <% if current_user && !current_user.active? %>
+              <li id="fat-menu" class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account
+                  <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to 'Mijn Authorisaties', oauth_authorized_applications_path %></li>
+                  <li><%= link_to 'Instellingen', edit_user_path(current_user) %></li>
+                  <li class="divider"></li>
+                  <li>
+                    <%= link_to 'Uitloggen', destroy_user_session_path, method: 'delete' %>
+                  </li>
+                </ul>
+              </li>
+            <% end %>
           <% end %>
           <% PublicPage.all.each do |pp| %>
             <% if pp.public %>
               <li><%= link_to pp.title, "/#{pp.title}" %></li>
             <% end %>
           <% end %>
-          <% if signed_in? %>
+          <% if current_user&.active? %>
             <li>
               <%= link_to "Sticker plakken", new_sticker_path %>
             </li>
@@ -68,6 +82,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Developer
                   <span class="caret"></span></a>
                 <ul class="dropdown-menu">
+                  <%= switch_user_select %>
                   <li><%= link_to 'OAuth Applicaties', oauth_applications_path %></li>
                   <li><%= link_to 'API Docs', '/api_docs' %></li>
                   <li><%= link_to 'Push', new_push_path %></li>
