--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<% if signed_in? %>
+<% if current_user&.active? %>
     <div class="container">
       <div class="row">
         <div class="col-md-4">
