info instead of notice

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,9 @@
     <%= render 'layouts/header' %>
     <div class="container">
       <% flash.each do |key, value| %>
+        <% if key == "notice" %>
+          <% key = "info" %>
+        <% end %> 
         <div class="alert alert-<%= key %> text-center" role="alert"><%= value %></div>
       <% end %>
       <% if content_for?(:title) %>
