--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,8 @@
   <nav>
     <ul>
       <% unless signed_in? %>
-          <li><%= link_to 'Inloggen', signin_path %></li>
+        <li><%= link_to 'Inloggen', signin_path %></li>
+        <li><%= link_to "Registreer", new_registration_path(User) %></li>
       <% end %>
     </ul>
   </nav>
