--- a/app/views/recipe/index.html.erb
+++ b/app/views/recipe/index.html.erb
@@ -6,6 +6,7 @@
     <tr>
       <th>Naam</th>
       <th>Soort</th>
+      <th>Aantal x gebrouwen</th>
       <th>Gemaakt op</th>
       <th>Laatst verbetert op</th>
       <th>Actions</th>
@@ -17,6 +18,7 @@
       <tr data-link="<%= recipe_path(recipe) %>">
         <td style="width: 50%;"><%= recipe.name %></td>
         <td><%= recipe.beer %></td>
+        <td><%= recipe.brews.count %></td>
         <td><%= recipe.created_at.strftime("%d/%m/%Y") %></td>
         <td><%= recipe.updated_at.strftime("%d/%m/%Y") %></td>
         <td>
