--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <% flash.each do |key, value| %>
         <% if key == "notice" %>
           <% key = "info" %>
-        <% elsif key == "error" %>
+        <% elsif key == "error" || key == "alert" %>
           <% key = "danger" %>
         <% end %>
         <div class="alert alert-<%= key %> text-center" role="alert"><%= value %></div>
