--- a/app/views/devise/invitations/edit.html.erb
+++ b/app/views/devise/invitations/edit.html.erb
@@ -34,7 +34,7 @@
         <br>
         <%= link_to "Privacy Statement", "/privacy" %>
         <div class="actions">
-        <p><%= f.submit t("devise.invitations.edit.submit_button") %></p>
+          <p><%= f.submit t("devise.invitations.edit.submit_button"), class: "btn btn-large brn-primary" %></p>
         </div>
       <% end %>
     </div>
