--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,6 +6,7 @@
     <ul>
       <% unless signed_in? %>
         <li><%= link_to 'Inloggen', signin_path %></li>
+        <li><%= link_to 'Registreer', invited_path %></li>
       <% end %>
     </ul>
   </nav>
