--- a/app/views/static_pages/invited.html.erb
+++ b/app/views/static_pages/invited.html.erb
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="col-md-6 col-md-offset-3">
 
-      <%= form_for "uitnodigen", :url => "users/invitation/accept", :html => {:method => :get} do |f| %>
+      <%= form_for "", :url => "users/invitation/accept", :html => {:method => :get} do |f| %>
         <div class="input-group">
           <span class="input-group-addon"><i class="fa fa-user-o"></i></span>
           <%= f.text_field :invitation_token, autofocus: true, class: "form-control", placeholder: "Uitnodigingscode" %>
