Gemiddeld cijfer op persoonlijke pagina toegevoegd

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,6 +18,7 @@
     </section>
     <section>
       Reviews: <%= @user.reviews.count %><br>
+      Gemiddeld cijfer: <%= @user.weight %><br>
       <% if @user.lid? %>
         Sunday Ratio: <%= @user.sunday_ratio.round(2) %>%<br>
       <% end %>
