--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,12 @@
     </section>
     <section>
       Reviews: <%= @user.reviews.count %><br>
-      Gemiddeld cijfer: <%= @user.weight.round(2) %><br>
+      Gemiddeld cijfer:
+      <% if @user.weight %>
+        <%= @user.weight.round(2) %><br>
+      <% else %>
+        Nog onbekend<br>
+      <% end %>
       <% if @user.lid? %>
         Sunday Ratio: <%= @user.sunday_ratio.round(2) %>%<br>
       <% end %>
