--- a/app/views/devise/invitations/new.html.erb
+++ b/app/views/devise/invitations/new.html.erb
@@ -2,20 +2,15 @@
   Nieuw lid uitnodigen
 <% end %>
 
-<div class="row">
-  <div class="container">
-    <div class="col-md-6 col-md-offset-3">
+<%= render layout: 'layouts/forms/form_small' do %>
+  <%= form_for resource, :as => resource_name, :url => invitation_path(resource_name), :html => {:method => :post} do |f| %>
+    <%= devise_error_messages! %>
 
-      <%= form_for resource, :as => resource_name, :url => invitation_path(resource_name), :html => {:method => :post} do |f| %>
-        <%= devise_error_messages! %>
-
-        <div class="input-group">
-          <span class="input-group-addon"><i class="fa fa-envelope-o"></i></span>
-          <%= f.email_field :email, autofocus: false, class: "form-control", placeholder: "email" %>
-        </div>
-        &nbsp;
-        <p><%= f.submit t("devise.invitations.new.submit_button"), class: "btn btn-large btn-success" %></p>
-      <% end %>
+    <div class="input-group">
+      <span class="input-group-addon"><i class="fa fa-envelope-o"></i></span>
+      <%= f.email_field :email, autofocus: false, class: "form-control", placeholder: "email" %>
     </div>
-  </div>
-</div>
+    &nbsp;
+    <p><%= f.submit t("devise.invitations.new.submit_button"), class: "btn btn-large btn-success" %></p>
+  <% end %>
+<% end %>
