--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -2,23 +2,18 @@
   Wachtwoord vergeten?
 <% end %>
 
-<div class="row">
-  <div class="container">
-    <div class="col-md-6 col-md-offset-3">
-      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-        <%= devise_error_messages! %>
+<%= render layout: 'layouts/forms/form_small' do %>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: {method: :post}) do |f| %>
+    <%= devise_error_messages! %>
 
-        <div class="input-group">
-          <span class="input-group-addon"><i class="fa fa-envelope-o"></i></span>
-          <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "email" %>
-        </div>
-        &nbsp;
-        <div class="actions">
-          <%= f.submit "Stuur reset instructies", class: "btn btn-large btn-danger" %>
-        </div>
-        <%= render "devise/shared/links" %>
-      <% end %>
-
+    <div class="input-group">
+      <span class="input-group-addon"><i class="fa fa-envelope-o"></i></span>
+      <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "email" %>
     </div>
-  </div>
-</div>
+    &nbsp;
+    <div class="actions">
+      <%= f.submit "Stuur reset instructies", class: "btn btn-large btn-danger" %>
+    </div>
+    <%= render "devise/shared/links" %>
+  <% end %>
+<% end %>
