--- a/app/views/static_pages/invited.html.erb
+++ b/app/views/static_pages/invited.html.erb
@@ -1,19 +1,15 @@
 <% content_for :title do %>
   Uitnodiging
 <% end %>
-<div class="row">
-  <div class="container">
-    <div class="col-md-6 col-md-offset-3">
 
-      <%= form_for "", :url => "users/invitation/accept", :html => {:method => :get} do |f| %>
-        <div class="input-group">
-          <span class="input-group-addon"><i class="fa fa-user-o"></i></span>
-          <%= f.text_field :invitation_token, autofocus: true, class: "form-control", placeholder: "Uitnodigingscode" %>
-        </div>
-        <br>
-        <%= link_to "Privacy Statement", "/privacy" %>
-        <p><%= f.submit "Registreer", class: "btn btn-large btn-success" %></p>
-      <% end %>
+<%= render layout: 'layouts/forms/form_small' do %>
+  <%= form_for "", :url => "users/invitation/accept", :html => {:method => :get} do |f| %>
+    <div class="input-group">
+      <span class="input-group-addon"><i class="fa fa-user-o"></i></span>
+      <%= f.text_field :invitation_token, autofocus: true, class: "form-control", placeholder: "Uitnodigingscode" %>
     </div>
-  </div>
-</div>
+    <br>
+    <%= link_to "Privacy Statement", "/privacy" %>
+    <p><%= f.submit "Registreer", class: "btn btn-large btn-success" %></p>
+  <% end %>
+<% end %>
