--- a/app/views/stickers/personal.html.erb
+++ b/app/views/stickers/personal.html.erb
@@ -7,9 +7,9 @@ $(document).ready(function () {
 <table id="sticker" class="tablesorter table table-hover">
   <thead>
     <tr>
-      <th>datum</th>
-      <th>locatie</th>
-      <th>controls</th>
+      <th>Datum</th>
+      <th>Locatie</th>
+      <th>Admin stuff</th>
     </tr>
   </thead>
   <%= will_paginate %>
